@@ -1,1 +1,3 @@
 -javaagent:/Users/bianliang1/configfile/micool/micool.jar
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
