@@ -1,3 +1,4 @@
 # custom IntelliJ IDEA VM options
-
--javaagent:c:\windows\yz\yz.jar
+--add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED
+-javaagent:C:\Windows\yz\active-agt-idea.jar
